# DV-Assignment4

./: .gitignore  README.md  build.sh
assignment 4/: assignment4
assignment 4/make/cmake/: CMakeLists.txt
assignment 4/make/vs2019/: VTK_Properties.props  assignment4.sln  assignment4.vcxproj
assignment 4/source/: assignment4.cpp
